tests/security/taintFromAwaitedAbstractMethod/output.txt
ERROR: TaintedData - input.hack:23:14 - Data from a URL query string found its way to an HTML tag